// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaptionTextNodeList 1`] = `
<div
  className="video__captions"
>
  <ClipEditor
    captionIsHighlighted={false}
    currentTime={0}
    eventHandlers={
      Object {
        "onAfterRangeChange": [Function],
        "onClearPress": [Function],
        "onPlayPausePress": [Function],
        "onRangeChange": [Function],
        "onRestartPress": [Function],
        "onSkipBackPress": [Function],
        "onSkipForwardPress": [Function],
        "onZoomToClipPress": [Function],
      }
    }
    isPaused={true}
    isZoomedToClip={false}
    rangeSliders={
      Array [
        Object {
          "end": 25,
          "label": "Zoom",
          "start": 0,
          "styles": Object {
            "handle": Object {
              "backgroundColor": "#758aa8",
              "border": "1px solid #2c4770",
            },
            "rail": Object {
              "backgroundColor": "#d3dae3",
            },
            "track": Object {
              "backgroundColor": "#758aa8",
            },
          },
          "type": "VIEW",
        },
        Object {
          "end": 0,
          "label": "Clip",
          "start": 0,
          "styles": Object {
            "handle": Object {
              "backgroundColor": "#758aa8",
              "border": "1px solid #2c4770",
            },
            "rail": Object {
              "backgroundColor": "#d3dae3",
            },
            "track": Object {
              "backgroundColor": "#758aa8",
            },
          },
          "type": "SELECTION",
        },
      ]
    }
    stateAuthority="SCROLL"
    videoDuration={5224}
    videoIdHash="iEfwIxM7MmnOKb7zt4HqW8IxUWy6F7a236fSOQlUUWI="
  />
  <div
    className="document document--static"
  >
    <div
      className="document__row"
    >
      <div
        className="document__row-inner"
      >
        <div
          className="document__text"
        >
          <h3
            className="document__node-text document__node-text--speaker-top"
          >
            -
          </h3>
          <div
            className="document__text document__text--caption"
            onMouseUp={[Function]}
            onScroll={[Function]}
          >
            <div
              className="document__node"
            >
              <h3
                className="document__node-text document__node-text--speaker"
              >
                Raddatz
              </h3>
              <div
                className="document__node-text-container"
              >
                <p
                  className="document__node-text document__node-text--p"
                >
                  Good evening I'm Martha Raddatz from ABC News. 
                </p>
                <div
                  className="document__node-height-div"
                >
                  <p
                    className="document__node-text document__node-text--hidden-p"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CaptionTextNodeList with highlights from props 1`] = `
<div
  className="video__captions"
>
  <ClipEditor
    captionIsHighlighted={true}
    currentTime={5.31}
    eventHandlers={
      Object {
        "onAfterRangeChange": [Function],
        "onClearPress": [Function],
        "onPlayPausePress": [Function],
        "onRangeChange": [Function],
        "onRestartPress": [Function],
        "onSkipBackPress": [Function],
        "onSkipForwardPress": [Function],
        "onZoomToClipPress": [Function],
      }
    }
    isPaused={true}
    isZoomedToClip={true}
    rangeSliders={
      Array [
        Object {
          "end": 8.7,
          "label": "Zoom",
          "start": 3.6,
          "styles": Object {
            "handle": Object {
              "backgroundColor": "#758aa8",
              "border": "1px solid #2c4770",
            },
            "rail": Object {
              "backgroundColor": "#d3dae3",
            },
            "track": Object {
              "backgroundColor": "#758aa8",
            },
          },
          "type": "VIEW",
        },
        Object {
          "end": 7.2,
          "label": "Zoom",
          "start": 5.3,
          "styles": Object {
            "handle": Object {
              "backgroundColor": "#758aa8",
              "border": "1px solid #2c4770",
            },
            "rail": Object {
              "backgroundColor": "#d3dae3",
            },
            "track": Object {
              "backgroundColor": "#758aa8",
            },
          },
          "type": "SELECTION",
        },
      ]
    }
    stateAuthority="SCROLL"
    videoDuration={5224}
    videoIdHash="iEfwIxM7MmnOKb7zt4HqW8IxUWy6F7a236fSOQlUUWI="
  />
  <div
    className="document document--static"
  >
    <div
      className="document__row"
    >
      <div
        className="document__row-inner"
      >
        <div
          className="document__text"
        >
          <h3
            className="document__node-text document__node-text--speaker-top"
          >
            -
          </h3>
          <div
            className="document__text document__text--caption"
            onMouseUp={[Function]}
            onScroll={[Function]}
          >
            <div
              className="document__node"
            >
              <h3
                className="document__node-text document__node-text--speaker"
              >
                Raddatz
              </h3>
              <div
                className="document__node-text-container"
              >
                <p
                  className="document__node-text document__node-text--p"
                >
                  Good evening I'm Martha Raddatz from ABC News. 
                </p>
                <div
                  className="document__node-height-div"
                >
                  <p
                    className="document__node-text document__node-text--hidden-p"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
